@@ -12,9 +12,13 @@ categories = ["authentication"]
 edition = "2021"
 publish = ["crates-io"]
 
+[features]
+log = ["dep:log"]
+
 [dependencies]
 dirs = "5.0.1"
 git2 = { version = "0.17.2", default-features = false }
+log = { version = "0.4.19", optional = true }
 terminal-prompt = "0.2.2"
 
 [dev-dependencies]
